--- a/pyproject.toml
+++ b/pyproject.toml
@@ -3,7 +3,6 @@ name = "fastapi-poetry-template"
 version = "0.1.0"
 description = ""
 authors = ["dekelbyz <bayazi455@gmail.com>"]
-readme = "README.md"
 
 [tool.poetry.dependencies]
 python = "^3.11"
@@ -54,3 +53,5 @@ pre-commit = "^3.7.1"
 [build-system]
 requires = ["poetry-core"]
 build-backend = "poetry.core.masonry.api"
+
+packages = [{include = "fastapi_poetry_template", from="."}]
